# maat

./: .codespellrc  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  Dockerfile  HACKING.md  LICENCE  Makefile  PACKAGING.md  README.md  bashbuild  vcpkg.json
.github/workflows/: ci.yml  python-package.yml
bindings/: bindings.cmake
bindings/packaging/: Dockerfile  pyproject.toml  setup.cfg  setup.py
bindings/python/: py_arch.cpp  py_breakpoint.cpp  py_config.cpp  py_constraint.cpp  py_cpu.cpp  py_engine.cpp  py_env.cpp  py_env_EVM.cpp  py_event.cpp  py_expr.cpp  py_filesystem.cpp  py_info.cpp  py_loader.cpp  py_maat.cpp  py_memory.cpp  py_path.cpp  py_process.cpp  py_serialization.cpp  py_settings.cpp  py_solver.cpp  py_stats.cpp  py_value.cpp  python_bindings.hpp  util.cpp
cmake/: coverage.cmake  dev-mode.cmake  docs.cmake  install-config.cmake  install-config.cmake.in  install-rules.cmake  lint-targets.cmake  lint.cmake  open-cpp-coverage.cmake.example  prelude.cmake  pytest.cmake  variables.cmake
cmake/modules/: FindGMP.cmake  FindZ3.cmake
docs/: Doxyfile.in
generate/src/include/maat/: config.hpp.in
ports/lief/: 0002-Fix-Uninitialized-CMake-var.patch  portfile.cmake  vcpkg.json
ports/mbedtls/: enable-pthread.patch  portfile.cmake
ports/sleigh/: portfile.cmake  vcpkg.json
ports/sleigh-speccompiler/: portfile.cmake  vcpkg-port-config.cmake  vcpkg.json
ports/vcpkg-tool-sleigh-speccompiler/: portfile.cmake  vcpkg-port-config.cmake  vcpkg.json
src/arch/: arch.cpp  arch_ARM32.cpp  arch_ARM64.cpp  arch_EVM.cpp  arch_PPC32.cpp  arch_PPC64.cpp  arch_RISCV.cpp  arch_X86.cpp  lifter.cpp  lifterX86.cpp  register_aliases.cpp
src/engine/: breakpoint.cpp  callother.cpp  engine.cpp  event.cpp  info.cpp  logger.cpp  path.cpp  settings.cpp  snapshot.cpp  symbol.cpp
src/env/: abi.cpp  env.cpp  env_EVM.cpp  env_linux.cpp  filesystem.cpp  library.cpp
src/env/emulated_libs/: libc.cpp
src/env/emulated_syscalls/: linux_syscalls.cpp
src/expression/: constraint.cpp  expression.cpp  number.cpp  simplification.cpp  value.cpp  value_set.cpp  varcontext.cpp
src/include/: arch.hpp  breakpoint.hpp  callother.hpp  config.hpp  constraint.hpp  cpu.hpp  engine.hpp  event.hpp  exception.hpp  expression.hpp  info.hpp  ir.hpp  lifter.hpp  loader.hpp  logger.hpp  maat.hpp  memory.hpp  memory_page.hpp  number.hpp  path.hpp  pinst.hpp  process.hpp  settings.hpp  simplification.hpp  snapshot.hpp  solver.hpp  symbol.hpp  types.hpp  value.hpp  varcontext.hpp
src/include/env/: env.hpp  filesystem.hpp  library.hpp  syscall.hpp
src/include/maat/: arch.hpp  callother.hpp  config.hpp  constraint.hpp  cpu.hpp  engine.hpp  event.hpp  exception.hpp  expression.hpp  info.hpp  ir.hpp  lifter.hpp  loader.hpp  maat.hpp  memory.hpp  memory_internal.hpp  memory_page.hpp  number.hpp  path.hpp  pinst.hpp  process.hpp  saved_mem_state.hpp  serialization_helpers.hpp  serializer.hpp  settings.hpp  simplification.hpp  sleigh_interface.hpp  snapshot.hpp  solver.hpp  stats.hpp  symbol.hpp  types.hpp  util.hpp  value.hpp  varcontext.hpp
src/include/maat/env/: env.hpp  env_EVM.hpp  filesystem.hpp  filesystem_internal.hpp  library.hpp  os.hpp  syscall.hpp
src/ir/: asm_inst.cpp  block.cpp  cpu.cpp  instruction.cpp  ir_cache.cpp
src/loader/: loader.cpp  loader_EVM.cpp  loader_lief.cpp  loader_lief_elf.cpp
src/memory/: memory.cpp  memory_map.cpp  symbolic_memory.cpp
src/serialization/: deserializer.cpp  serialization_helpers.cpp  serializer.cpp
src/solver/: solver.cpp  solver_btor.cpp  solver_z3.cpp
tests/: CMakeLists.txt
tests/adv-tests/: test_all.cpp  test_coverage.cpp  test_evm.cpp  test_hash.cpp  test_hash_solving.cpp  test_serialization.cpp  test_solve_symptr.cpp
tests/find-package/: CMakeLists.txt
tests/find-package/src/: main.cpp
tests/python-tests/: .gitignore  maat_test_config.py  run_tests.sh  test_linux_ARM32.py  test_linux_x64.py  test_linux_x86.py
tests/resources/plaintext_pwd/: plaintext_password  plaintext_password.c
tests/resources/simple_algo_1/: simple_algo_1.c
tests/resources/simple_algo_2/: crackmex86  simple_algo_2  simple_algo_2.c
tests/resources/simple_algo_3/: simple_algo_3
tests/resources/smart_contracts/: HelloWorld.sol  SimpleConstructor.sol  Sqrt.sol
tests/resources/symbolic_ptr_binaries/: sym_rw_1.c  sym_write_1  sym_write_1.c  sym_write_2  sym_write_2.c
tests/resources/x64_elf/: crackme1
tests/resources/x86_elf/: cat  crackme_vm  gzip  ls  mv  tar
tests/resources/xored_pwd/: xored_password  xored_password_arm64
tests/ressources/md5/: md5.c  md5.elf
tests/ressources/simple_algo_3/: simple_algo_3.c
tests/ressources/symbolic_ptr_binaries/: sym_read_1  sym_read_1.c  sym_rw_1
tests/ressources/x86_elf/: echo  grep
tests/ressources/xored_pwd/: xored_password.c
tests/unit-tests/: test_all.cpp  test_archARM32.cpp  test_archARM64.cpp  test_archEVM.cpp  test_archPPC32.cpp  test_archPPC64.cpp  test_archX64.cpp  test_archX86.cpp  test_breakpoint.cpp  test_event.cpp  test_expression.cpp  test_ir.cpp  test_loader.cpp  test_memory.cpp  test_serialization.cpp  test_simplification.cpp  test_snapshot.cpp  test_solver.cpp  test_symbolic_memory.cpp
