[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "wheel",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
    "cmake-build-extension>=0.3.2",
    "cmake>=3.22.0",
    "ninja"
]

[tool.setuptools_scm]
root = "../.."
local_scheme = "dirty-tag"

[tool.cibuildwheel]
build-frontend = "build"