[metadata]
name = maat
description = Maat - Symbolic execution framework
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL
platforms = any
url = https://maat.re

project_urls =
    Changelog = https://github.com/trailofbits/maat/releases
    Tracker = https://github.com/trailofbits/issues
    Documentation = https://maat.re
    Source = https://github.com/trailofbits/maat

keywords =
    maat
    symbolic
    emulation
    concolic
    binary analysis
    pcode


classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Framework :: Robot Framework
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[options]
python_requires = >=3.8