[metadata]
name = pymaat
description = Maat - Symbolic execution framework
version = file: Version.txt
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL
platforms = any
url = https://maat.re

project_urls =
    Changelog = https://github.com/trailofbits/maat/releases
    Tracker = https://github.com/trailofbits/issues
    Documentation = https://maat.re
    Source = https://github.com/trailofbits/maat

keywords =
    maat
    symbolic
    emulation
    concolic
    binary analysis
    pcode


classifiers =
    Development Status :: 4 - Beta
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Intended Audience :: Science/Research
    Programming Language :: C++
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[options]
python_requires = >=3.7